--- a/About.html
+++ b/About.html
@@ -100,7 +100,7 @@
         }
 
         /* VISION, MISSION, SERVICES */
-        .mission-vision-section {
+       .mission-vision-section {
     margin-top: 30px;
     padding: 20px;
     background-color: #f9fbfd;
@@ -109,30 +109,10 @@
     animation: fadeIn 1s ease-in;
 }
 
-.vision-box {
-    background-color: #e6f4ff;
-    border-left: 6px solid #00BFFF;
-    padding: 20px;
-    margin-bottom: 30px;
-    border-radius: 10px;
-    position: relative;
-}
-
-.icon-vision {
-    font-size: 2em;
-    color: #00BFFF;
-    position: absolute;
-    top: 20px;
-    right: 20px;
-}
-
-.mission-list h4 {
+.mission-vision-section h4 {
     font-size: 1.5em;
     color: #00BFFF;
-    margin-bottom: 20px;
-    display: flex;
-    align-items: center;
-    gap: 10px;
+    margin-bottom: 10px;
 }
 
 .mission-item {
@@ -148,11 +128,22 @@
 }
 
 .mission-icon {
-    font-size: 1.4em;
+    font-size: 1.5em;
     color: #00BFFF;
     margin-top: 5px;
 }
 
+        .section-content ul li {
+    margin-bottom: 10px;
+    font-size: 1.05em;
+    line-height: 1.6;
+}
+
+.section-content ul li::before {
+    content: "📌 ";
+    color: #00BFFF;
+    font-weight: bold;
+}
         /* FOOTER */
         footer {
             background-color: #00BFFF;
@@ -235,29 +226,56 @@
     </div>
 
     <!-- MISI -->
-    <div class="mission-list">
-        <h4><i class="fas fa-bullseye"></i> Misi</h4>
+    <h4><i class="fas fa-bullseye"></i> Misi</h4>
 
-        <div class="mission-item">
-            <i class="fas fa-universal-access mission-icon"></i>
-            <p>Menyediakan layanan informasi yang mudah diakses bagi sivitas akademika dan masyarakat umum.</p>
-        </div>
-
-        <div class="mission-item">
-            <i class="fas fa-microchip mission-icon"></i>
-            <p>Meningkatkan kualitas layanan melalui pemanfaatan teknologi informasi terkini.</p>
-        </div>
-
-        <div class="mission-item">
-            <i class="fas fa-book-open mission-icon"></i>
-            <p>Menjadi pusat sumber belajar yang mendukung kegiatan pendidikan, penelitian, dan pengabdian masyarakat.</p>
-        </div>
-
-        <div class="mission-item">
-            <i class="fas fa-handshake mission-icon"></i>
-            <p>Menjalin kerja sama dengan perpustakaan dan lembaga informasi lainnya di tingkat nasional dan internasional untuk memperluas akses dan kualitas sumber informasi.</p>
-        </div>
+    <div class="mission-item">
+        <i class="fas fa-universal-access mission-icon"></i>
+        <p>Menyediakan layanan informasi yang mudah diakses bagi sivitas akademika dan masyarakat umum.</p>
     </div>
+
+    <div class="mission-item">
+        <i class="fas fa-microchip mission-icon"></i>
+        <p>Meningkatkan kualitas layanan melalui pemanfaatan teknologi informasi terkini.</p>
+    </div>
+
+    <div class="mission-item">
+        <i class="fas fa-book-open mission-icon"></i>
+        <p>Menjadi pusat sumber belajar yang mendukung kegiatan pendidikan, penelitian, dan pengabdian masyarakat.</p>
+    </div>
+
+    <div class="mission-item">
+        <i class="fas fa-handshake mission-icon"></i>
+        <p>Menjalin kerja sama dengan perpustakaan dan lembaga informasi lainnya di tingkat nasional dan internasional untuk memperluas akses dan kualitas sumber informasi.</p>
+    </div>
+</div>
+
+<div class="section-title">Sejarah Singkat Perpustakaan</div>
+<div class="section-content">
+    <p>
+        Perpustakaan Jesika Yusnita Laoly didirikan sebagai bagian dari komitmen mendukung literasi informasi
+        dan pengembangan ilmu pengetahuan di lingkungan kampus. Sejak awal berdirinya, perpustakaan ini telah
+        bertransformasi menjadi pusat sumber belajar berbasis teknologi dengan layanan digital yang ramah pengguna.
+    </p>
+</div>
+    
+<div class="section-title">Struktur Pengelola Perpustakaan</div>
+<div class="section-content">
+    <ul>
+        <li><strong>Kepala Perpustakaan:</strong> Jesika Yusnita Laoly</li>
+        <li><strong>Staf Referensi:</strong> Rini Oktaviani</li>
+        <li><strong>Staf IT & Digitalisasi:</strong> Taufik Hidayat</li>
+        <li><strong>Administrasi & Keanggotaan:</strong> Bella Sari</li>
+    </ul>
+</div>
+    
+    <div class="section-title">Keunggulan dan Nilai Utama</div>
+<div class="section-content">
+    <ul>
+        <li><strong>Akses Digital:</strong> Koleksi e-book dan jurnal ilmiah nasional dan internasional.</li>
+        <li><strong>Layanan Ramah:</strong> Staf perpustakaan dilatih untuk mendampingi pengunjung secara optimal.</li>
+        <li><strong>Ruang Nyaman:</strong> Area baca yang tenang dan ergonomis untuk belajar.</li>
+        <li><strong>Integrasi Teknologi:</strong> Pemanfaatan software manajemen pustaka berbasis web.</li>
+    </ul>
 </div>
 
      <!-- Layanan Perpustakaan -->
