--- a/About.html
+++ b/About.html
@@ -249,69 +249,68 @@
     </div>
 </div>
 
-<div class="section-title">Sejarah Singkat Perpustakaan</div>
+<div class="section-title"><h3>Sejarah Singkat Perpustakaa</h3></div>
 <div class="section-content">
-    <p>
-        Perpustakaan Jesika Yusnita Laoly didirikan sebagai bagian dari komitmen mendukung literasi informasi
-        dan pengembangan ilmu pengetahuan di lingkungan kampus. Sejak awal berdirinya, perpustakaan ini telah
-        bertransformasi menjadi pusat sumber belajar berbasis teknologi dengan layanan digital yang ramah pengguna.
-    </p>
+    <div style="background-color: #f0f8ff; border-left: 5px solid #00BFFF; border-radius: 10px; padding: 20px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); color: #333; line-height: 1.7;">
+        <p>
+            Perpustakaan Jesika Yusnita Laoly didirikan sebagai bagian dari komitmen universitas untuk menciptakan pusat sumber informasi yang unggul dan terbuka bagi seluruh sivitas akademika dan masyarakat. 
+            Sejak awal berdirinya pada tahun <strong>2010</strong>, perpustakaan ini terus berkembang mengikuti kemajuan teknologi dan kebutuhan pengguna.
+        </p>
+        <p>
+            Awalnya hanya menyediakan koleksi cetak terbatas, perpustakaan kini telah memperluas layanannya dengan koleksi digital, akses jurnal ilmiah internasional, serta berbagai pelatihan literasi informasi. 
+            Ruang baca yang nyaman, fasilitas komputer, dan layanan mandiri menjadi andalan perpustakaan dalam mendukung pembelajaran modern.
+        </p>
+        <p>
+            Hingga kini, perpustakaan tidak hanya menjadi tempat menyimpan buku, tetapi juga menjadi ruang dialog ilmiah, kolaborasi, dan inspirasi. 
+            Dengan moto <em>“Melayani dengan Ilmu, Berkembang Bersama Pengetahuan”</em>, perpustakaan terus berinovasi untuk masa depan pendidikan yang inklusif dan berdaya saing.
+        </p>
+    </div>
 </div>
-    
-<div class="section-title">Struktur Pengelola Perpustakaan</div>
+    <!-- Layanan Perpustakaan -->
+<div class="section-title">
+    <h3>Layanan Perpustakaan</h3>
+</div>
 <div class="section-content">
-    <ul>
-        <li><strong>Kepala Perpustakaan:</strong> Jesika Yusnita Laoly</li>
-        <li><strong>Staf Referensi:</strong> Rini Oktaviani</li>
-        <li><strong>Staf IT & Digitalisasi:</strong> Taufik Hidayat</li>
-        <li><strong>Administrasi & Keanggotaan:</strong> Bella Sari</li>
-    </ul>
-</div>
-    
-    <div class="section-title">Keunggulan dan Nilai Utama</div>
-<div class="section-content">
-    <ul>
-        <li><strong>Akses Digital:</strong> Koleksi e-book dan jurnal ilmiah nasional dan internasional.</li>
-        <li><strong>Layanan Ramah:</strong> Staf perpustakaan dilatih untuk mendampingi pengunjung secara optimal.</li>
-        <li><strong>Ruang Nyaman:</strong> Area baca yang tenang dan ergonomis untuk belajar.</li>
-        <li><strong>Integrasi Teknologi:</strong> Pemanfaatan software manajemen pustaka berbasis web.</li>
-    </ul>
-</div>
-
-     <!-- Layanan Perpustakaan -->
-    <div class="section-title"><h3>Layanan Perpustakaan</h3>
-    <div class="section-content">
-        <div class="service">
-            <h4>1. Layanan Sirkulasi</h4>
-            <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746439955/c58f4bb252ef51911da5c2c1a6bee0e2_naechm.jpg" alt="Peminjaman Buku">
-            <p>Layanan ini mencakup peminjaman, pengembalian, dan perpanjangan masa pinjam koleksi cetak seperti buku teks dan referensi. Mahasiswa dapat meminjam buku menggunakan kartu anggota perpustakaan dengan durasi pinjaman sesuai kebijakan (biasanya 1–2 minggu) dan dapat diperpanjang selama tidak sedang dipinjam pengguna lain.</p>
-        </div>
-
-        <div class="service">
-            <h4>2. Layanan Referensi</h4>
-            <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746439952/ae416691ba1fbfff4c139f9f5eb707ed_zxz8n2.jpg" alt="Perpustakaan Digital">
-            <p>Layanan ini menyediakan bantuan dalam menemukan informasi akademik, termasuk ensiklopedia, kamus, jurnal ilmiah, dan karya ilmiah lainnya. Pustakawan siap membantu pencarian sumber referensi terpercaya, baik dalam bentuk cetak maupun digital. Akses ke database ilmiah juga tersedia secara daring.</p>
-        </div>
-
-        <div class="service">
-            <h4>3. Layanan Ruang Baca</h4>
-            <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746439249/Huston_Company__Custom_scholar_carrels_and_reading_tables._University_library_iiw5na.jpg" alt="Ruangan Baca">
-            <p>Perpustakaan menyediakan ruang baca yang tenang, nyaman, dan dilengkapi dengan pencahayaan yang baik. Terdapat meja individu, sofa baca, dan ruang diskusi kelompok. Area ini ditujukan bagi pengguna yang ingin membaca di tempat atau mengerjakan tugas secara fokus.</p>
-        </div>
-
-        <div class="service">
-            <h4>4. Layanan Akses Komputer dan Internet</h4>
-            <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746439606/bbed3389c818ba44e3211b3e35d2ab1e_k0btt2.jpg" alt="Penggunaan Komputer dan Internet">
-            <p>Layanan ini menyediakan komputer yang terhubung ke internet untuk keperluan akademik, seperti mengakses jurnal online, katalog perpustakaan (OPAC), e-book, serta portal e-learning kampus. Pengguna juga dapat mencetak tugas atau dokumen dengan layanan tambahan print dan scan.</p>
-        </div>
-
-        <div class="service">
-            <h4>5. Layanan Bimbingan Pemustaka</h4>
-            <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746440568/20eee38c77b94225d3871e2f2eb4762a_phc1kb.jpg"Layanan Bimbingan">
-            <p>Perpustakaan memberikan layanan edukatif berupa bimbingan cara menelusur informasi, penggunaan katalog online (OPAC), serta pelatihan penggunaan database ilmiah. Layanan ini bertujuan meningkatkan literasi informasi dan kemandirian belajar mahasiswa.</p>
-        </div>
+    <div class="service">
+        <h4>1. Layanan Sirkulasi</h4>
+        <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746439955/c58f4bb252ef51911da5c2c1a6bee0e2_naechm.jpg" alt="Peminjaman Buku">
+        <p style="text-align: justify;">
+            Layanan ini mencakup peminjaman, pengembalian, dan perpanjangan masa pinjam koleksi cetak seperti buku teks dan referensi. Mahasiswa dapat meminjam buku menggunakan kartu anggota perpustakaan dengan durasi pinjaman sesuai kebijakan (biasanya 1–2 minggu) dan dapat diperpanjang selama tidak sedang dipinjam pengguna lain.
+        </p>
     </div>
 
+    <div class="service">
+        <h4>2. Layanan Referensi</h4>
+        <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746439952/ae416691ba1fbfff4c139f9f5eb707ed_zxz8n2.jpg" alt="Perpustakaan Digital">
+        <p style="text-align: justify;">
+            Layanan ini menyediakan bantuan dalam menemukan informasi akademik, termasuk ensiklopedia, kamus, jurnal ilmiah, dan karya ilmiah lainnya. Pustakawan siap membantu pencarian sumber referensi terpercaya, baik dalam bentuk cetak maupun digital. Akses ke database ilmiah juga tersedia secara daring.
+        </p>
+    </div>
+
+    <div class="service">
+        <h4>3. Layanan Ruang Baca</h4>
+        <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746439249/Huston_Company__Custom_scholar_carrels_and_reading_tables._University_library_iiw5na.jpg" alt="Ruangan Baca">
+        <p style="text-align: justify;">
+            Perpustakaan menyediakan ruang baca yang tenang, nyaman, dan dilengkapi dengan pencahayaan yang baik. Terdapat meja individu, sofa baca, dan ruang diskusi kelompok. Area ini ditujukan bagi pengguna yang ingin membaca di tempat atau mengerjakan tugas secara fokus.
+        </p>
+    </div>
+
+    <div class="service">
+        <h4>4. Layanan Akses Komputer dan Internet</h4>
+        <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746439606/bbed3389c818ba44e3211b3e35d2ab1e_k0btt2.jpg" alt="Penggunaan Komputer dan Internet">
+        <p style="text-align: justify;">
+            Layanan ini menyediakan komputer yang terhubung ke internet untuk keperluan akademik, seperti mengakses jurnal online, katalog perpustakaan (OPAC), e-book, serta portal e-learning kampus. Pengguna juga dapat mencetak tugas atau dokumen dengan layanan tambahan print dan scan.
+        </p>
+    </div>
+
+    <div class="service">
+        <h4>5. Layanan Bimbingan Pemustaka</h4>
+        <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746440568/20eee38c77b94225d3871e2f2eb4762a_phc1kb.jpg" alt="Layanan Bimbingan">
+        <p style="text-align: justify;">
+            Perpustakaan memberikan layanan edukatif berupa bimbingan cara menelusur informasi, penggunaan katalog online (OPAC), serta pelatihan penggunaan database ilmiah. Layanan ini bertujuan meningkatkan literasi informasi dan kemandirian belajar mahasiswa.
+        </p>
+    </div>
+</div>
 <footer>
     <p>&copy; 2025 All rights reserved</p>
 </footer>
