--- a/index.html
+++ b/index.html
@@ -378,6 +378,38 @@
     </iframe>
   </div>
 </div>
+    <div class="section-title">Galeri Kegiatan Perpustakaan</div>
+<div class="section-content">
+    <div style="display: flex; overflow-x: auto; gap: 20px; padding: 10px 0;">
+        <div style="min-width: 220px; background-color: #f0f8ff; padding: 10px; border-radius: 10px; text-align: center; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+            <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746439952/ae416691ba1fbfff4c139f9f5eb707ed_zxz8n2.jpg" alt="Workshop Literasi" style="height: 140px; border-radius: 8px; margin-bottom: 10px;">
+            <p style="font-weight: bold; color: #00BFFF;">Workshop Literasi Digital</p>
+        </div>
+        <div style="min-width: 220px; background-color: #f0f8ff; padding: 10px; border-radius: 10px; text-align: center; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+            <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746439955/c58f4bb252ef51911da5c2c1a6bee0e2_naechm.jpg" alt="Pelatihan Mahasiswa" style="height: 140px; border-radius: 8px; margin-bottom: 10px;">
+            <p style="font-weight: bold; color: #00BFFF;">Pelatihan Mahasiswa Baru</p>
+        </div>
+        <div style="min-width: 220px; background-color: #f0f8ff; padding: 10px; border-radius: 10px; text-align: center; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+            <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746439606/bbed3389c818ba44e3211b3e35d2ab1e_k0btt2.jpg" alt="Kegiatan Membaca" style="height: 140px; border-radius: 8px; margin-bottom: 10px;">
+            <p style="font-weight: bold; color: #00BFFF;">Kegiatan Membaca Bersama</p>
+        </div>
+    </div>
+</div>
+    <div class="section-title">Testimoni Pengunjung</div>
+<div class="section-content">
+    <div style="background-color: #f9f9f9; border-left: 5px solid #00BFFF; border-radius: 10px; padding: 20px; margin-bottom: 20px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+        <p style="font-style: italic; color: #555;">
+            "Perpustakaan ini sangat nyaman dan koleksinya lengkap. Saya bisa mengerjakan tugas dengan tenang dan mendapatkan referensi yang saya butuhkan!"
+        </p>
+        <p style="text-align: right; font-weight: bold; color: #00BFFF;">– Rina, Mahasiswa Ilmu Komunikasi</p>
+    </div>
+    <div style="background-color: #f9f9f9; border-left: 5px solid #00BFFF; border-radius: 10px; padding: 20px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+        <p style="font-style: italic; color: #555;">
+            "Layanannya sangat ramah dan teknologi digitalnya memudahkan saya mengakses jurnal dari rumah."
+        </p>
+        <p style="text-align: right; font-weight: bold; color: #00BFFF;">– Dimas, Mahasiswa Teknik Informatika</p>
+    </div>
+</div>
 
 <!-- CSS untuk tampilan -->
 <style>
