--- a/index.html
+++ b/index.html
@@ -348,7 +348,55 @@
         }
     }
 </style>
-<!-- REKOMENDASI MUSIK SPOTIFY -->
+
+   <div class="section-title">
+       <h3>Galeri Kegiatan Perpustakaan</h3>
+   </div>
+<div class="section-content">
+    <div style="display: flex; overflow-x: auto; gap: 20px; padding: 10px 0;">
+        <div style="text-align: center;">
+            <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746459451/c88027ff8f990581666d73068ddd510d_yfzrkh.jpg" alt="Workshop Literasi" style="height: 200px; border-radius: 10px;">
+            <p style="font-size: 0.85em; color: #444;">Workshop Literasi</p>
+        </div>
+        <div style="text-align: center;">
+            <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746459451/3769719a5cb3bb49d41a6225d15b4084_j94wjv.jpg" alt="Pelatihan Mahasiswa" style="height: 200px; border-radius: 10px;">
+            <p style="font-size: 0.85em; color: #444;">Pelatihan Mahasiswa</p>
+        </div>
+        <div style="text-align: center;">
+            <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746459450/46c5ed9b1df5159a53f85439f49c6855_qsc3m6.jpg" alt="BOOKs Club" style="height: 200px; border-radius: 10px;">
+            <p style="font-size: 0.85em; color: #444;">BOOKs Club</p>
+        </div>
+        <div style="text-align: center;">
+            <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746459451/c7454a94c0a4da36c2d09520e4a48e69_y7i6li.jpg" alt="Diskusi Kelompok" style="height: 200px; border-radius: 10px;">
+            <p style="font-size: 0.85em; color: #444;">Diskusi Kelompok</p>
+        </div>
+        <div style="text-align: center;">
+            <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746459450/8436ebb4226ae489715eb1ebefce17e6_xstqzr.jpg" alt="Storytelling" style="height: 200px; border-radius: 10px;">
+            <p style="font-size: 0.85em; color: #444;">Storytelling</p>
+        </div>
+    </div>
+    <p style="font-size: 0.9em; color: #666;">Galeri ini menampilkan beragam kegiatan literasi dan edukatif yang rutin diselenggarakan oleh perpustakaan untuk meningkatkan minat baca dan keterampilan informasi pengguna.</p>
+</div>
+ 
+    <div class="section-title">
+        <h3>Testimoni Pengunjung</h3>
+    </div>
+<div class="section-content">
+    <div style="background-color: #f9f9f9; border-left: 5px solid #00BFFF; border-radius: 10px; padding: 20px; margin-bottom: 20px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+        <p style="font-style: italic; color: #555;">
+            "Perpustakaan ini sangat nyaman dan koleksinya lengkap. Saya bisa mengerjakan tugas dengan tenang dan mendapatkan referensi yang saya butuhkan!"
+        </p>
+        <p style="text-align: right; font-weight: bold; color: #00BFFF;">– Rina, Mahasiswa Ilmu Komunikasi</p>
+    </div>
+    <div style="background-color: #f9f9f9; border-left: 5px solid #00BFFF; border-radius: 10px; padding: 20px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+        <p style="font-style: italic; color: #555;">
+            "Layanannya sangat ramah dan teknologi digitalnya memudahkan saya mengakses jurnal dari rumah."
+        </p>
+        <p style="text-align: right; font-weight: bold; color: #00BFFF;">– Dimas, Mahasiswa Teknik Informatika</p>
+    </div>
+</div>
+
+    <!-- REKOMENDASI MUSIK SPOTIFY -->
 <div class="music-section">
   <h2>🎧 Rekomendasi Musik Belajar</h2>
 
@@ -377,38 +425,6 @@
       allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
     </iframe>
   </div>
-</div>
-    <div class="section-title">Galeri Kegiatan Perpustakaan</div>
-<div class="section-content">
-    <div style="display: flex; overflow-x: auto; gap: 20px; padding: 10px 0;">
-        <div style="min-width: 220px; background-color: #f0f8ff; padding: 10px; border-radius: 10px; text-align: center; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
-            <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746439952/ae416691ba1fbfff4c139f9f5eb707ed_zxz8n2.jpg" alt="Workshop Literasi" style="height: 140px; border-radius: 8px; margin-bottom: 10px;">
-            <p style="font-weight: bold; color: #00BFFF;">Workshop Literasi Digital</p>
-        </div>
-        <div style="min-width: 220px; background-color: #f0f8ff; padding: 10px; border-radius: 10px; text-align: center; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
-            <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746439955/c58f4bb252ef51911da5c2c1a6bee0e2_naechm.jpg" alt="Pelatihan Mahasiswa" style="height: 140px; border-radius: 8px; margin-bottom: 10px;">
-            <p style="font-weight: bold; color: #00BFFF;">Pelatihan Mahasiswa Baru</p>
-        </div>
-        <div style="min-width: 220px; background-color: #f0f8ff; padding: 10px; border-radius: 10px; text-align: center; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
-            <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746439606/bbed3389c818ba44e3211b3e35d2ab1e_k0btt2.jpg" alt="Kegiatan Membaca" style="height: 140px; border-radius: 8px; margin-bottom: 10px;">
-            <p style="font-weight: bold; color: #00BFFF;">Kegiatan Membaca Bersama</p>
-        </div>
-    </div>
-</div>
-    <div class="section-title">Testimoni Pengunjung</div>
-<div class="section-content">
-    <div style="background-color: #f9f9f9; border-left: 5px solid #00BFFF; border-radius: 10px; padding: 20px; margin-bottom: 20px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
-        <p style="font-style: italic; color: #555;">
-            "Perpustakaan ini sangat nyaman dan koleksinya lengkap. Saya bisa mengerjakan tugas dengan tenang dan mendapatkan referensi yang saya butuhkan!"
-        </p>
-        <p style="text-align: right; font-weight: bold; color: #00BFFF;">– Rina, Mahasiswa Ilmu Komunikasi</p>
-    </div>
-    <div style="background-color: #f9f9f9; border-left: 5px solid #00BFFF; border-radius: 10px; padding: 20px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
-        <p style="font-style: italic; color: #555;">
-            "Layanannya sangat ramah dan teknologi digitalnya memudahkan saya mengakses jurnal dari rumah."
-        </p>
-        <p style="text-align: right; font-weight: bold; color: #00BFFF;">– Dimas, Mahasiswa Teknik Informatika</p>
-    </div>
 </div>
 
 <!-- CSS untuk tampilan -->
