--- a/contact.html
+++ b/contact.html
@@ -147,6 +147,27 @@
     </div>
 </div>
 
+    <div class="contact-card" style="margin-top: 30px; text-align: left;">
+    <h3>Informasi Kontak</h3>
+    <p><strong>Alamat:</strong> Perpustakaan Universitas Sumatera Utara, Jl. Dr. Mansur No. 9, Medan</p>
+    <p><strong>Email:</strong> jesikalaoly@gmail.com</p>
+    <p><strong>Telepon:</strong> (061) 821-1234</p>
+    <p><strong>Jam Layanan:</strong> Senin–Jumat, 08.00 – 16.00 WIB</p>
+</div>
+
+    <div class="contact-card" style="margin-top: 30px;">
+    <h3>Testimoni Pengunjung</h3>
+    <blockquote style="font-style: italic; color: #333;">"Pelayanan pustakawan sangat ramah dan koleksi bukunya lengkap!" – Rina, Mahasiswa FISIP</blockquote>
+    <blockquote style="font-style: italic; color: #333;">"Ruang baca nyaman, cocok buat fokus nugas berjam-jam." – Andi, Teknik Sipil</blockquote>
+</div>
+
+    <div class="contact-card" style="margin-top: 30px; text-align: center;">
+    <h3>Ikuti Kami</h3>
+    <a href="#" style="margin: 0 10px;">Instagram</a> |
+    <a href="#" style="margin: 0 10px;">Facebook</a> |
+    <a href="#" style="margin: 0 10px;">Twitter</a>
+</div>
+
 <footer>
     <p>&copy; 2025 All rights reserved</p>
 </footer>
