--- a/contact.html
+++ b/contact.html
@@ -126,6 +126,30 @@
     </nav>
 </header>
 
+   <div class="contact-card" style="margin-top: 30px; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.15);">
+    <h3 style="color: #00BFFF; margin-bottom: 15px;">Informasi Kontak</h3>
+    <p><strong>📍 Alamat:</strong> Perpustakaan Universitas Sumatera Utara, Jl. Dr. Mansur No. 9, Medan</p>
+    <p><strong>📧 Email:</strong> <a href="mailto:perpustakaan@usu.ac.id" style="color: #00BFFF; text-decoration: none;">perpustakaan@usu.ac.id</a></p>
+    <p><strong>📞 Telepon:</strong> (061) 821-1234</p>
+    <p><strong>⏰ Jam Layanan:</strong> Senin–Jumat, 08.00 – 16.00 WIB</p>
+</div>
+
+    <div class="section-title">Testimoni Pengunjung</div>
+<div class="section-content">
+    <div style="background-color: #f9f9f9; border-left: 5px solid #00BFFF; border-radius: 10px; padding: 20px; margin-bottom: 20px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+        <p style="font-style: italic; color: #555;">
+            "Perpustakaan ini sangat nyaman dan koleksinya lengkap. Saya bisa mengerjakan tugas dengan tenang dan mendapatkan referensi yang saya butuhkan!"
+        </p>
+        <p style="text-align: right; font-weight: bold; color: #00BFFF;">– Rina, Mahasiswa Ilmu Komunikasi</p>
+    </div>
+    <div style="background-color: #f9f9f9; border-left: 5px solid #00BFFF; border-radius: 10px; padding: 20px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+        <p style="font-style: italic; color: #555;">
+            "Layanannya sangat ramah dan teknologi digitalnya memudahkan saya mengakses jurnal dari rumah."
+        </p>
+        <p style="text-align: right; font-weight: bold; color: #00BFFF;">– Dimas, Mahasiswa Teknik Informatika</p>
+    </div>
+</div>
+
 <!-- CONTACT US SECTION -->
 <div class="container">
     <div class="contact-card">
@@ -147,27 +171,28 @@
     </div>
 </div>
 
-    <div class="contact-card" style="margin-top: 30px; text-align: left;">
-    <h3>Informasi Kontak</h3>
-    <p><strong>Alamat:</strong> Perpustakaan Universitas Sumatera Utara, Jl. Dr. Mansur No. 9, Medan</p>
-    <p><strong>Email:</strong> jesikalaoly@gmail.com</p>
-    <p><strong>Telepon:</strong> (061) 821-1234</p>
-    <p><strong>Jam Layanan:</strong> Senin–Jumat, 08.00 – 16.00 WIB</p>
+    <div class="contact-card" style="margin-top: 30px; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.15); text-align: center;">
+    <h3 style="color: #00BFFF; margin-bottom: 15px;">📣 Ikuti Kami</h3>
+    <div style="font-size: 1.1em;">
+        <a href="#" style="margin: 0 15px; text-decoration: none; color: #333; transition: color 0.3s;">Instagram</a> |
+        <a href="#" style="margin: 0 15px; text-decoration: none; color: #333; transition: color 0.3s;">Facebook</a> |
+        <a href="#" style="margin: 0 15px; text-decoration: none; color: #333; transition: color 0.3s;">Twitter</a>
+    </div>
 </div>
 
-    <div class="contact-card" style="margin-top: 30px;">
-    <h3>Testimoni Pengunjung</h3>
-    <blockquote style="font-style: italic; color: #333;">"Pelayanan pustakawan sangat ramah dan koleksi bukunya lengkap!" – Rina, Mahasiswa FISIP</blockquote>
-    <blockquote style="font-style: italic; color: #333;">"Ruang baca nyaman, cocok buat fokus nugas berjam-jam." – Andi, Teknik Sipil</blockquote>
+    <div class="contact-card" style="margin-top: 30px; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.15);">
+    <h3 style="color: #00BFFF; margin-bottom: 15px;">📍 Lokasi Kami</h3>
+    <iframe 
+        src="https://www.google.com/maps/embed?pb=!1m18...etc" 
+        width="100%" 
+        height="250" 
+        style="border:0; border-radius: 10px;" 
+        allowfullscreen="" 
+        loading="lazy" 
+        referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
 </div>
-
-    <div class="contact-card" style="margin-top: 30px; text-align: center;">
-    <h3>Ikuti Kami</h3>
-    <a href="#" style="margin: 0 10px;">Instagram</a> |
-    <a href="#" style="margin: 0 10px;">Facebook</a> |
-    <a href="#" style="margin: 0 10px;">Twitter</a>
-</div>
-
+    
 <footer>
     <p>&copy; 2025 All rights reserved</p>
 </footer>
