--- a/contact.html
+++ b/contact.html
@@ -134,7 +134,9 @@
     <p><strong>⏰ Jam Layanan:</strong> Senin–Jumat, 08.00 – 16.00 WIB</p>
 </div>
 
-    <div class="section-title">Testimoni Pengunjung</div>
+    <div class="section-title" style="margin-top: 30px; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.15);">
+    <h3 style="color: #00BFFF; margin-bottom: 15px;">Testimoni Pengunjung</h3>
+        </div>
 <div class="section-content">
     <div style="background-color: #f9f9f9; border-left: 5px solid #00BFFF; border-radius: 10px; padding: 20px; margin-bottom: 20px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
         <p style="font-style: italic; color: #555;">
