--- a/contact.html
+++ b/contact.html
@@ -143,14 +143,18 @@
         <p style="font-style: italic; color: #555;">
             "Perpustakaan ini sangat nyaman dan koleksinya lengkap. Saya bisa mengerjakan tugas dengan tenang dan mendapatkan referensi yang saya butuhkan!"
         </p>
-        <p style="text-align: right; font-weight: bold; color: #00BFFF;">– Rina, Mahasiswa Ilmu Komunikasi</p>
+        <p style="text-align: right; font-weight: bold; color: #00BFFF;">
+            – Rina, Mahasiswa Ilmu Komunikasi
+        </p>
     </div>
 
     <div style="background-color: #f9f9f9; border-left: 5px solid #00BFFF; border-radius: 10px; padding: 20px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
         <p style="font-style: italic; color: #555;">
             "Layanannya sangat ramah dan teknologi digitalnya memudahkan saya mengakses jurnal dari rumah."
         </p>
-        <p style="text-align: right; font-weight: bold; color: #00BFFF;">– Dimas, Mahasiswa Teknik Informatika</p>
+        <p style="text-align: right; font-weight: bold; color: #00BFFF;">
+            – Dimas, Mahasiswa Teknik Informatika
+        </p>
     </div>
 </div>
 
@@ -175,15 +179,6 @@
     </div>
 </div>
 
-    <div class="contact-card" style="margin-top: 30px; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.15); text-align: center;">
-    <h3 style="color: #00BFFF; margin-bottom: 15px;">📣 Ikuti Kami</h3>
-    <div style="font-size: 1.1em;">
-        <a href="#" style="margin: 0 15px; text-decoration: none; color: #333; transition: color 0.3s;">Instagram</a> |
-        <a href="#" style="margin: 0 15px; text-decoration: none; color: #333; transition: color 0.3s;">Facebook</a> |
-        <a href="#" style="margin: 0 15px; text-decoration: none; color: #333; transition: color 0.3s;">Twitter</a>
-    </div>
-</div>
-
     <div class="contact-card" style="margin-top: 30px; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.15);">
     <h3 style="color: #00BFFF; margin-bottom: 15px;">📍 Lokasi Kami</h3>
     <iframe 
@@ -196,7 +191,15 @@
         referrerpolicy="no-referrer-when-downgrade">
     </iframe>
 </div>
-    
+
+     <div class="contact-card" style="margin-top: 30px; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.15); text-align: center;">
+    <h3 style="color: #00BFFF; margin-bottom: 15px;">📣 Ikuti Kami</h3>
+    <div style="font-size: 1.1em;">
+        <a href="#" style="margin: 0 15px; text-decoration: none; color: #333; transition: color 0.3s;">Instagram</a> |
+        <a href="#" style="margin: 0 15px; text-decoration: none; color: #333; transition: color 0.3s;">Facebook</a> |
+        <a href="#" style="margin: 0 15px; text-decoration: none; color: #333; transition: color 0.3s;">Twitter</a>
+    </div>
+</div>
 <footer>
     <p>&copy; 2025 All rights reserved</p>
 </footer>
