--- a/About.html
+++ b/About.html
@@ -224,34 +224,32 @@
             </p>
         </div>
     </div>
+<!-- MISI -->
+<h4><i class="fas fa-bullseye"></i> Misi</h4>
 
-    <!-- MISI -->
-    <h4><i class="fas fa-bullseye"></i> Misi</h4>
+<div class="mission-item" style="text-align: justify;">
+    <i class="fas fa-universal-access mission-icon"></i>
+    <p>Menyediakan layanan informasi yang mudah diakses bagi sivitas akademika dan masyarakat umum.</p>
+</div>
 
-    <div class="mission-item">
-        <i class="fas fa-universal-access mission-icon"></i>
-        <p>Menyediakan layanan informasi yang mudah diakses bagi sivitas akademika dan masyarakat umum.</p>
-    </div>
+<div class="mission-item" style="text-align: justify;">
+    <i class="fas fa-microchip mission-icon"></i>
+    <p>Meningkatkan kualitas layanan melalui pemanfaatan teknologi informasi terkini.</p>
+</div>
 
-    <div class="mission-item">
-        <i class="fas fa-microchip mission-icon"></i>
-        <p>Meningkatkan kualitas layanan melalui pemanfaatan teknologi informasi terkini.</p>
-    </div>
+<div class="mission-item" style="text-align: justify;">
+    <i class="fas fa-book-open mission-icon"></i>
+    <p>Menjadi pusat sumber belajar yang mendukung kegiatan pendidikan, penelitian, dan pengabdian masyarakat.</p>
+</div>
 
-    <div class="mission-item">
-        <i class="fas fa-book-open mission-icon"></i>
-        <p>Menjadi pusat sumber belajar yang mendukung kegiatan pendidikan, penelitian, dan pengabdian masyarakat.</p>
-    </div>
-
-    <div class="mission-item">
-        <i class="fas fa-handshake mission-icon"></i>
-        <p>Menjalin kerja sama dengan perpustakaan dan lembaga informasi lainnya di tingkat nasional dan internasional untuk memperluas akses dan kualitas sumber informasi.</p>
-    </div>
+<div class="mission-item" style="text-align: justify;">
+    <i class="fas fa-handshake mission-icon"></i>
+    <p>Menjalin kerja sama dengan perpustakaan dan lembaga informasi lainnya di tingkat nasional dan internasional untuk memperluas akses dan kualitas sumber informasi.</p>
 </div>
 
 <div class="section-title"><h3>Sejarah Singkat Perpustakaa</h3></div>
 <div class="section-content">
-    <div style="background-color: #f0f8ff; border-left: 5px solid #00BFFF; border-radius: 10px; padding: 20px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); color: #333; line-height: 1.7;">
+    <div style="background-color: #f0f8ff; border-left: 5px solid #00BFFF; border-radius: 10px; padding: 20px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); color: #333; line-height: 1.7; text-align: justify;">
         <p>
             Perpustakaan Jesika Yusnita Laoly didirikan sebagai bagian dari komitmen universitas untuk menciptakan pusat sumber informasi yang unggul dan terbuka bagi seluruh sivitas akademika dan masyarakat. 
             Sejak awal berdirinya pada tahun <strong>2010</strong>, perpustakaan ini terus berkembang mengikuti kemajuan teknologi dan kebutuhan pengguna.
@@ -266,6 +264,7 @@
         </p>
     </div>
 </div>
+
     <!-- Layanan Perpustakaan -->
 <div class="section-title">
     <h3>Layanan Perpustakaan</h3>
