--- a/index.html
+++ b/index.html
@@ -349,7 +349,9 @@
     }
 </style>
 
-    <div class="section-title">Galeri Kegiatan Perpustakaan</div>
+    <div class="section-title
+        <h3>Galeri Kegiatan Perpustakaan</h3>
+        </div>
 <div class="section-content">
     <div style="display: flex; overflow-x: auto; gap: 20px; padding: 10px 0;">
         <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746459451/c88027ff8f990581666d73068ddd510d_yfzrkh.jpg" alt="Workshop Literasi" style="height: 200px; border-radius: 10px;">
@@ -358,39 +360,7 @@
         <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746459451/c7454a94c0a4da36c2d09520e4a48e69_y7i6li.jpg" alt="Diskusi Kelompok" style="height: 200px; border-radius: 10px;">
         <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746459450/8436ebb4226ae489715eb1ebefce17e6_xstqzr.jpg" alt="Storytelling" alt="BOOKs Club" style="height: 200px; border-radius: 10px;">
     </div>
-    <p style="font-size: 0.9em; color: #666;">Dokumentasi kegiatan: pelatihan, literasi informasi, dan ruang baca.</p>
-</div>
-
-    
-  <div class="section-title">
-    <h3>Galeri Kegiatan Perpustakaan</h3>
-</div>
-<div class="section-content">
-    <div style="background: white; padding: 20px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
-        <div style="display: flex; overflow-x: auto; gap: 20px; padding: 10px 0;">
-            <div style="text-align: center;">
-                <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746459451/c88027ff8f990581666d73068ddd510d_yfzrkh.jpg" alt="Workshop Literasi" style="height: 200px; border-radius: 10px;">
-                <p style="font-size: 0.85em; color: #444;">Workshop Literasi</p>
-            </div>
-            <div style="text-align: center;">
-                <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746459451/3769719a5cb3bb49d41a6225d15b4084_j94wjv.jpg" alt="Pelatihan Mahasiswa" style="height: 200px; border-radius: 10px;">
-                <p style="font-size: 0.85em; color: #444;">Pelatihan Mahasiswa</p>
-            </div>
-            <div style="text-align: center;">
-                <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746459450/46c5ed9b1df5159a53f85439f49c6855_qsc3m6.jpg" alt="BOOKs Club" style="height: 200px; border-radius: 10px;">
-                <p style="font-size: 0.85em; color: #444;">BOOKs Club</p>
-            </div>
-            <div style="text-align: center;">
-                <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746459451/c7454a94c0a4da36c2d09520e4a48e69_y7i6li.jpg" alt="Diskusi Kelompok" style="height: 200px; border-radius: 10px;">
-                <p style="font-size: 0.85em; color: #444;">Diskusi Kelompok</p>
-            </div>
-            <div style="text-align: center;">
-                <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746459450/8436ebb4226ae489715eb1ebefce17e6_xstqzr.jpg" alt="Storytelling" style="height: 200px; border-radius: 10px;">
-                <p style="font-size: 0.85em; color: #444;">Storytelling</p>
-            </div>
-        </div>
-        <p style="font-size: 0.9em; color: #666;">Galeri ini menampilkan beragam kegiatan literasi dan edukatif yang rutin diselenggarakan oleh perpustakaan untuk meningkatkan minat baca dan keterampilan informasi pengguna.</p>
-    </div>
+    <p style="font-size: 0.9em; color: #666;">Dokumentasi kegiatan: Workshop Literasi, Pelatihan Mahasiswa, BOOKs Club, Diskusi Kelompok dan Storytelling.</p>
 </div>
 
     <!-- REKOMENDASI MUSIK SPOTIFY -->
