--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         <div class="buku" style="background: white; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.08); padding: 15px; text-align: center;">
             <img src=""https://res.cloudinary.com/dwa2jqgtp/image/upload/v1742386915/Screenshot_20250319_192026_Drive_cq8kl2.jpg" alt="Buku 8" style="width: 100%; border-radius: 8px;">
             <p style="margin: 10px 0; color: #444;">Get it Done: Surprising Lessons from the Science of Motivation</p>
-            <a href="https://drive.google.com/file/d/1FHRw0bYtWv5m9MWm30HND1G7DAwZYsMY/view?usp=drivesdk" target="_blank" 
+            <a href="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1742386915/Screenshot_20250319_192026_Drive_cq8kl2.jpg" target="_blank" 
                style="background: #00BFFF; color: white; font-weight: bold; text-decoration: none; padding: 10px 20px; border-radius: 6px; display: inline-block; margin-top: 10px; transition: background 0.3s ease;">
                Download File
             </a>
@@ -251,7 +251,7 @@
     
 <!-- EVENT TERKINI -->
 <div class="event fade-in" style="margin-top: 60px; background: #f9f9f9; padding: 40px 20px; border-radius: 16px; box-shadow: 0 6px 18px rgba(0,0,0,0.1); max-width: 1200px; margin-left: auto; margin-right: auto;">
-    <h3 style="color: #4CAF50; text-align: center; margin-bottom: 30px;">Event Terkini</h3>
+    <h3 style="color: #00BFFF; text-align: center; margin-bottom: 30px;">Event Terkini</h3>
     
     <div class="event-container" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 25px;">
         <div class="event-item" style="background: white; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.08); padding: 15px; text-align: center;">
